--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "devDependencies": {},
+  "dependencies": {
     "ejs": "^2.6.1",
     "express": "^4.16.4"
   }
