--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "ejs-locals": "^1.0.2",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "fs": "^0.0.1-security"
   }
 }
